# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests-linter.yml
gendiff/: __init__.py
gendiff/formaters/: __init__.py  plain.py  stylish.py
gendiff/modules/: args_parser.py  generate_difference.py  parser.py  search_difference.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_plain.py  test_search_difference.py  test_stylish.py
tests/fixtures/: complex_1.yaml  complex_2.yaml  complex_json.txt  expectation_json.txt  simple_json.txt
