[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gennady Potapkov <gppotapkov@sbercloud.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
attrs = "^24.1.0"
pyparsing = "^3.1.2"
pytest = "^8.3.2"
pyyaml = "^6.0.1"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
